--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ button{
     padding: 3px 7px;
     border: none;
     color: white;
+    cursor: pointer;
 }
 
 
@@ -49,4 +50,12 @@ button{
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 2px;
+}
+
+input:invalid{
+    border-color: rgba(255, 0, 0, 0.467);
+}
+
+input:valid{
+    border-color: black;
 }
